--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+        resConfigs "en"
     }
     buildTypes {
         release {
@@ -32,8 +33,10 @@ android {
 }
 
 dependencies {
-    implementation 'com.google.firebase:firebase-core:16.0.7'
-    implementation "com.google.firebase:firebase-database:16.1.0"
+    implementation 'com.google.firebase:firebase-core:16.0.9'
+    implementation 'com.google.firebase:firebase-database:17.0.0'
+    implementation 'com.google.firebase:firebase-auth:17.0.0'
+    implementation 'com.firebaseui:firebase-ui-auth:5.0.0'
 
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
